# simple_performance_dashboard

./: CLAUDE.md  Cargo.toml  README.md  REQUIREMENTS.md  TEST_SUITE.md
.claude/: settings.local.json
src/: hardware.rs  hardware_detection.rs  lib.rs  logger.rs  main.rs  model.rs  ui.rs
src/monitors/: amd.rs  apple.rs  generic.rs  intel.rs  mod.rs  nvidia.rs
tests/: integration_tests.rs
